# hegel-pm

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_MAP.md  COVERAGE_REPORT.md  Cargo.toml  LICENSE  LOC_REPORT.md  MANUAL_EDITS.md  README.md  RESEARCH_PLAN.md  RESEARCH_PLAN.review.1  TESTING.md  Trunk.toml  VISION.md  index.html
.ddd/feat/benchmark/: PLAN.md  SPEC.md
.ddd/feat/binary-cache/: PLAN.md  SPEC.md
.ddd/feat/cli-discovery/: PLAN.md  PLAN.review.1  SPEC.md  SPEC.review.1
.ddd/feat/extract-web-ui/: PLAN.md  SPEC.md
.ddd/feat/metrics-integration/: PLAN.md  PLAN.review.1  SPEC.md  SPEC.review.1
.ddd/feat/project-discovery/: PLAN.md  SPEC.md
.ddd/feat/swappable-frontends/: PLAN.md  SPEC.md
.ddd/feat/swappable_backend/: PLAN.md  PLAN.review.1  SPEC.md  SPEC.review.1
.ddd/feat/ui-v1/: PLAN.md  PLAN_REFINED_STEPS_7-10.md  PLAN_REFINED_STEPS_7-10.review.1  SPEC.md  SPEC.review.1  SPEC.review.2
frontends/: ADDING_FRONTENDS.md  README.md
frontends/alpine/: README.md  index.html
learnings/: LEARNING_SYCAMORE_COMPONENTS.md  LEARNING_SYCAMORE_FOUNDATIONS.md  LEARNING_SYCAMORE_PRACTICES.md
learnings/.ddd/: 0_sycamore_foundations_assessment.md  0_sycamore_foundations_assessment.review.1  1_open_questions.md
scripts/: README.md  doc-audit.pl  doc-audit.sh  generate-coverage-report.sh  generate-loc-report.sh  restart-server.sh  smoke-test-json.pl  test.sh
scripts/oneoffs/: 20251104-migrate-to-tracing.pl  20251105-unmigrate-cli-from-tracing.pl  20251113-extract-web-ui.pl
src/: CODE_MAP.md  CODE_MAP.review.1  README.md  api_types.rs  benchmark_mode.rs  cli.rs  debug.rs  discovery_mode.rs  lib.rs  main.rs  server_mode.rs  test_helpers.rs
src/cli/: CODE_MAP.md  CODE_MAP.review.1  README.md  hegel.rs
src/cli/discover/: README.md  README.review.1  all.rs  format.rs  list.rs  mod.rs  show.rs
src/client/: CODE_MAP.md  README.md  components.rs  mod.rs  types.rs
src/client/components/: all_projects_view.rs  metrics_view.rs  mod.rs  sidebar.rs  workflow_detail_view.rs
src/data_layer/: README.md  cache.rs  messages.rs  mod.rs  worker.rs
src/discovery/: CODE_MAP.md  README.md  api_types.rs  cache.rs  cache_manager.rs  config.rs  discover.rs  engine.rs  mod.rs  project.rs  state.rs  statistics.rs  walker.rs
src/http/: CODE_MAP.md  axum_backend.rs  mod.rs  warp_backend.rs
static/: hegel-pm-2d7b26219e095e14.js  hegel-pm-6fcba597b8c3a65d.js  hegel-pm-aaea92176490d4c6.js  hegel-pm-b4a85e83fca6b93.js  hegel-pm-beb921602a0dc3c4.js  hegel-pm-c93ae6cb10225240.js  index.html
tests/: README.md  async_component_lifecycle.rs  client_tests.rs  collapse_state.rs  navigation.rs  reactive_primitives.rs
tests/common/: mod.rs
