[package]
name = "hegel-pm"
version = "0.0.1"
edition = "2021"
authors = ["Eric Adum <eric.adum@gmail.com>"]
description = "Project manager for Hegel projects with web UI"
license = "SSPL-1.0"
repository = "https://github.com/dialecticianai/hegel-pm"

[dependencies]
# Core utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hegel = { path = "../hegel-cli" }
walkdir = "2.5"
dirs = "5.0"
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
open = "5.0"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
sycamore = { version = "0.8", features = ["hydrate", "suspense"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
gloo-net = "0.5"
console_error_panic_hook = "0.1"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "hegel-pm"
path = "src/main.rs"
required-features = ["server"]

[features]
default = []
server = []

[lib]
crate-type = ["cdylib", "rlib"]
