[package]
name = "hegel-pm"
version = "0.0.2"
edition = "2021"
authors = ["Eric Adum <eric.adum@gmail.com>"]
description = "CLI and library for discovering and managing Hegel projects"
license = "SSPL-1.0"
repository = "https://github.com/dialecticianai/hegel-pm"

[dependencies]
# Core utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Project dependencies
hegel = { path = "../hegel-cli" }
walkdir = "2.5"
dirs = "5.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "hegel-pm"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]
